:lipstick: Fix Z-index :lipstick:

--- a/source/css/_plugins/modal.less
+++ b/source/css/_plugins/modal.less
@@ -20,6 +20,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 
 .modal__container {
