--- a/source/css/_plugins/post-card.less
+++ b/source/css/_plugins/post-card.less
@@ -139,6 +139,16 @@ a.no-thumb {
   background-size: cover!important;
 }
 
+.post-card {
+  box-shadow: 0 0.5em 1em -0.125em rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.02);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.post-card:hover {
+  box-shadow: 0 1em 1.5em -0.625em rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.02);
+}
+
 @media all and (min-width: 800px) {
   .post-card {
     max-width: none;
